<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">Sleep as Android Gear Companion</string>

    <string name="action_settings">Settings</string>

    <string name="thank_you">Thank you</string>
    <string name="install_saa_text">Please install Sleep as Android</string>
    <string name="install_gearfit2_text_title">For Gear Fit 2 / Gear Fit 2 Pro:</string>
    <string name="install_gearfit2_text_subtitle">Please also install <b>"Sleep as Android for Gear Fit 2"</b> on your watch</string>
    <string name="install_gear_text_title">For other watches:</string>
    <string name="install_gear_text_subtitle">Please also install <b>"Sleep as Android - Native Gear Companion"</b> on your watch</string>
    <string name="setup_text">Please enable wearable sleep tracking in Sleep as Android</string>
    <string name="install">Install</string>
    <string name="setup">Setup</string>
    <string name="supported_watches_text"><b>Supported watches:</b> Gear 1, Gear 2, Gear S, Gear S2, Gear S3, Galaxy Watch, Gear Sport, Gear Fit 2, Gear Fit 2 Pro</string>
    <string name="unsupported_watches_text"><b>Unsupported watches:</b> Gear Fit 1</string>
    <string name="more_info">More info</string>
    <string name="running">Sleep tracking with Samsung. Tap to stop.</string>
    <string name="generating_report">Generating wearable report...</string>

</resources>