<?xml version="1.0" encoding="utf-8"?><FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"  android:id="@+id/main_layout"  android:layout_width="match_parent"  android:layout_height="match_parent"><ScrollView   android:layout_width="match_parent"  android:layout_height="match_parent">    <LinearLayout      android:padding="16dp"      android:background="@color/tint_dark"      android:orientation="vertical"      android:layout_width="match_parent" android:layout_height="wrap_content">    <ImageView      android:layout_gravity="center_horizontal"      android:id="@+id/logo"      android:src="@drawable/logo"      android:layout_centerHorizontal="true"      android:layout_width="wrap_content" android:layout_height="wrap_content"/>        <LinearLayout            android:orientation="vertical"            android:background="@drawable/card"            android:id="@+id/card_supported_watches"            android:paddingTop="16dp"            android:paddingLeft="16dp"            android:paddingRight="16dp"            android:layout_marginBottom="8dp"            android:layout_width="match_parent" android:layout_height="wrap_content">            <TextView                android:textColor="@color/secondary"                style="?android:attr/textAppearanceMedium"                android:id="@+id/supported_watches_text"                android:text="@string/supported_watches_text"                android:paddingBottom="8dp"                android:layout_width="match_parent" android:layout_height="wrap_content"/>            <TextView                android:textColor="@color/secondary"                style="?android:attr/textAppearanceMedium"                android:id="@+id/unsupported_watches_text"                android:text="@string/unsupported_watches_text"                android:layout_width="match_parent" android:layout_height="wrap_content"/>            <Button                android:textStyle="bold"                android:layout_gravity="right"                android:textColor="@color/primary"                android:background="@drawable/button_flat"                android:id="@+id/gear_fit2_more_info"                android:text="@string/more_info"                android:layout_width="wrap_content" android:layout_height="wrap_content"/>        </LinearLayout>        <LinearLayout          android:orientation="vertical"          android:background="@drawable/card"          android:id="@+id/card_install_saa"          android:paddingTop="16dp"          android:paddingLeft="16dp"          android:layout_marginBottom="8dp"          android:layout_width="match_parent" android:layout_height="wrap_content">            <TextView              android:textColor="@color/secondary"              style="?android:attr/textAppearanceMedium"              android:id="@+id/install_saa_text"              android:text="@string/install_saa_text"              android:layout_width="match_parent" android:layout_height="wrap_content"/>            <Button              android:textStyle="bold"              android:layout_gravity="right"              android:textColor="@color/primary"              android:background="@drawable/button_flat"              android:id="@+id/install_saa"              android:text="@string/install"              android:layout_width="wrap_content" android:layout_height="wrap_content"/>        </LinearLayout>        <LinearLayout          android:orientation="vertical"          android:background="@drawable/card"          android:id="@+id/card_install_gear"          android:paddingTop="16dp"          android:paddingLeft="16dp"          android:layout_marginBottom="8dp"          android:layout_width="match_parent" android:layout_height="wrap_content">            <TextView              android:textColor="@color/secondary"              style="?android:attr/textAppearanceMedium"              android:id="@+id/install_gear_text"              android:text="@string/install_gear_text"              android:layout_width="match_parent" android:layout_height="wrap_content"/>            <Button              android:textStyle="bold"              android:layout_gravity="right"              android:textColor="@color/primary"              android:background="@drawable/button_flat"              android:id="@+id/install_gear"              android:text="@string/install"              android:layout_width="wrap_content" android:layout_height="wrap_content"/>        </LinearLayout>        <LinearLayout          android:orientation="vertical"          android:background="@drawable/card"          android:id="@+id/card_setup"          android:paddingTop="16dp"          android:paddingLeft="16dp"          android:layout_marginBottom="8dp"          android:layout_width="match_parent" android:layout_height="wrap_content">            <TextView              android:textColor="@color/secondary"              style="?android:attr/textAppearanceMedium"              android:id="@+id/setup_text"              android:text="@string/setup_text"              android:layout_width="match_parent" android:layout_height="wrap_content"/>            <Button              android:textStyle="bold"              android:layout_gravity="right"              android:textColor="@color/primary"              android:background="@drawable/button_flat"              android:id="@+id/setup"              android:text="@string/setup"              android:layout_width="wrap_content" android:layout_height="wrap_content"/>        </LinearLayout>    </LinearLayout></ScrollView></FrameLayout>